# git-stats

./: Cargo.toml
nix/: rust.nix  shell.nix  sources.json
src/: main.rs
