[package]
name = "git-stats"
version = "0.1.0"
authors = ["Barak Bercovitz <barakber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.1"
git2 = { version = "0.13.9", features = ["zlib-ng-compat"] }
rayon = "1.4.0"
plotters = "*"
